Bottom scrollbar fix

--- a/src/documents/css/style.css.less
+++ b/src/documents/css/style.css.less
@@ -22,6 +22,7 @@ html {
 
 body {
   margin: 0 auto;
+  width: 98%;
 
   a {
     text-decoration: none;
@@ -33,7 +34,6 @@ main {
 
   &.photo {
     width: 100%;
-    margin: 0;
   }
 }
 
@@ -43,20 +43,17 @@ main {
 
   &.photo {
     margin: 0;
+    padding-left: 1em;
     width: 100%;
 
     .date-bubble {
       position: static;
       width: 100px;
-      margin: 0 0 10px 23px;
+      margin: 0 0 10px 0;
     }
 
     img {
-      width: 95%;
-    }
-
-    h4 {
-      text-indent: 1em;
+      width: 99%;
     }
   }
 
@@ -64,6 +61,11 @@ main {
   padding-top: 20px;
   margin-bottom: 80px;
   position: relative;
+
+  img {
+    width: 100%;
+    margin-left: -1.5em;
+  }
 
   .date-bubble {
     position: absolute;
